# mazter

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  compile-all-targets.sh
src/: achievements.rs  args.rs  cell_draw.rs  dim.rs  display.rs  events.rs  hof.rs  layout.rs  main.rs  maze.rs  nature.rs  path.rs  pos.rs  pos_map.rs  pos_move.rs  renderer.rs  run.rs  skin.rs  specs.rs
website/: deploy.sh  index.html
