[package]
name = "mazter"
version = "0.4.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
documentation = "https://dystroy.org/mazter"
homepage = "https://dystroy.org/mazter"
repository = "https://github.com/Canop/mazter"
edition = "2021"
keywords = ["key", "parse"]
license = "MIT"
categories = ["games"]
description = "Mazes in your terminal"
readme = "README.md"
rust-version = "1.56"

[dependencies]
anyhow = "1.0.49"
clap = { version = "3.2.1", features = ["derive"] }
cli-log = "2.0"
crokey = "0.4.3"
csv = "1.0"
directories = "4.0"
fnv = "1.0"
rand = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
smallvec = "1.9"
termimad = "0.22.0"
whoami = "1.2" 
