[package]
name = "mazter"
version = "2.0.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
documentation = "https://dystroy.org/mazter"
homepage = "https://dystroy.org/mazter"
repository = "https://github.com/Canop/mazter"
edition = "2021"
keywords = ["key", "parse"]
license = "MIT"
categories = ["games"]
description = "Mazes in your terminal"
readme = "README.md"
rust-version = "1.56"

[dependencies]
anyhow = "1.0.49"
clap = { version = "3.2.1", features = ["derive"] }
cli-log = "2.0"
crokey = "1.1"
csv = "1.2"
directories = "4.0"
fnv = "1.0"
rand = "0.8"
serde = { version = "1.0.160", features = ["derive"] }
smallvec = "1.10"
termimad = "0.31"
terminal-light = "1.7"
whoami = "1.2" 

[patch.crates-io]
# crokey = { path = "../crokey" }
# termimad = { path = "../termimad" }
